--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>Hello World</h1>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
